# djchat

./: pyproject.toml
djchat/account/migrations/: 0001_initial.py
djchat/djchat/: settings.py  urls.py
djchat/server/: admin.py  models.py  tests.py
djchat/server/migrations/: 0001_initial.py
